--- a/css/style.css
+++ b/css/style.css
@@ -16,22 +16,14 @@ body{
 a{
     text-decoration: none;
 }
-
-/*Content area*/
-.content-top{
-    margin: 0 auto;
-    background: url(../res/img/head_pic.jpg) no-repeat;
-    background-size: cover;
-    height: 75vh;
-}
-
 nav{
+    display: block;
     position: relative;
     overflow: hidden;
     padding: 75px 0 75px 0;
 }
 
-.nav ul{
+nav ul{
     list-style: none;
     margin: 0;
     padding: 0;
@@ -44,7 +36,7 @@ nav{
     
 }
 
-.nav ul li{
+nav ul li{
     text-transform: uppercase;
     font-weight: bold;
     position:relative;
@@ -54,11 +46,22 @@ nav{
     height:40px;
     font-family: MontserratBold;
 }
-.nav ul li a {
+nav ul li a {
     color: #fff;
     display:block;
     padding:0 15px;
     line-height: 40px;
+}
+
+/*Content area*/
+.content-top{
+    margin: 0 auto;
+    background: url(../res/img/head_pic.jpg) no-repeat;
+    background-size: cover;
+    height: 75vh;
+    text-align: center;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
 }
 .content-col-1{
     float: left;
