--- a/css/style.css
+++ b/css/style.css
@@ -149,17 +149,24 @@ button {
 }
 .footer ul li a{
     color: rgb( 86, 86, 86 );
-    line-height: 1.856;
+    line-height: 1.8;
+}
+.footer p{
+    color: rgb( 86, 86, 86 );
+    font-size: 0.3cm;
+    line-height: 1.8;
 }
 .copyright{
     background: black;
-    height: 50px;
+    height: 35px;
     float: left;
     width: 100%;
 }
 .copyright p{
     color: rgb( 86, 86, 86 );
     text-align: center;
+    font-size: 0.3cm;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .copyright a{
     color: rgb( 86, 86, 86 );
