--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,6 @@ button {
     background-size: cover;
     height: 25vh;
     margin: 0;
-    padding: 0;
 }
 .content-col-2{
     float: left;
@@ -122,6 +121,17 @@ button {
     margin: 0;
     padding: 0;
 }
+.content-col-1 h2,
+.content-col-2 h2,
+.content-col-3 h2,
+.content-col-4 h2 {
+    font-family: MontserratSemiBold;
+    font-size: 10px;
+    text-transform: uppercase;
+    text-align: center;
+    color: white;
+    padding: 15vh 0 0 0;
+}
 /*Footer Styles*/
 .footer{
     float: left;
@@ -134,7 +144,7 @@ button {
 .footer h2{
     font-family: MontserratSemiBold;
     text-transform: uppercase;
-    font-size: 0.3cm;
+    font-size: 10px;
     font-weight: bold;
     text-align: left;
     font-style: normal;
@@ -145,7 +155,7 @@ button {
 }
 .footer ul li{
     list-style: none;
-    font-size: 0.3cm;
+    font-size: 10px;
 }
 .footer ul li a{
     color: rgb( 86, 86, 86 );
@@ -153,7 +163,7 @@ button {
 }
 .footer p{
     color: rgb( 86, 86, 86 );
-    font-size: 0.3cm;
+    font-size: 10px;
     line-height: 1.8;
 }
 .copyright{
@@ -165,25 +175,9 @@ button {
 .copyright p{
     color: rgb( 86, 86, 86 );
     text-align: center;
-    font-size: 0.3cm;
+    font-size: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .copyright a{
     color: rgb( 86, 86, 86 );
 }
-
-/* 
-.Detroit_London_Florida_Las_Vegas_California {
-  font-size: 0.494cm;
-  font-family: "Georgia";
-  color: rgb( 86, 86, 86 );
-  font-style: italic;
-  text-align: left;
-  position: absolute;
-  left: 34.2194444444444cm;
-  top: 66.8161111111111cm;
-  width: 2.293cm;
-  height: 4.163cm;
-  z-index: 49;
-}fdfc
-*/
